# universal-governance

./: .gitattributes  .gitignore  LICENSE  Mainscript.py  OPENPGP_INTEGRATION.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_MIGRATION.md  openpgp_integration.py  pyproject.toml  registration_the_nurse_signed.json  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  security-scan.yml
examples/: 01_verify_registration.py  02_list_members.py  03_submit_proposal.py  README.md
registrations/: reg_AC507646E0141D69CC0A1B14D5AF4F7DCCD21B79.json
registrations/examples/: reg_AC507646E0141D69CC0A1B14D5AF4F7DCCD21B79.json
src/: __init__.py  governance_crypto.py  mainscript.py
tests/: integration_test.py  pyproject.toml  test_governance_crypto.py
